[package]
name = "lnurlkit"
version = "0.1.4"
edition = "2021"
rust-version = "1.60"
authors = ["Lucas Sunsi Abreu <lsunsi@pm.me>"]
description = "All you need to support LNURL and nothing more"
categories = ["finance", "web-programming", "web-programming::http-client", "api-bindings", "asynchronous"]
keywords = ["bitcoin", "lightning", "lnurl"]
repository = "https://github.com/lsunsi/lnurl-kit"
homepage = "https://github.com/lsunsi/lnurlkit"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
base64 = { version = "0.21.0", features = ["std"], default-features = false }
bech32 = { version = "0.9.0", default-features = false }
miniserde = { version = "0.1.0", default-features = false }
url = { version = "2.5.0", default-features = false }

axum = { version = "0.7.0", default-features = false,  optional = true }
reqwest = { version = "0.11.0", default-features = false, optional = true }

[dev-dependencies]
axum = { version = "0.7.0", features = ["tokio", "http1"], default-features = false }
reqwest = { version = "0.11.0", features = ["rustls-tls-webpki-roots"], default-features = false }
tokio = { version = "1.0.0", features = ["macros"], default-features = false }

[features]
client = ["dep:reqwest"]
server = ["dep:axum"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints.rust]
warnings = "deny"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[[test]]
name = "lud02"
required-features = ["client", "server"]

[[test]]
name = "lud03"
required-features = ["client", "server"]

[[test]]
name = "lud06"
required-features = ["client", "server"]

[[test]]
name = "lud09"
required-features = ["client", "server"]

[[test]]
name = "lud11"
required-features = ["client", "server"]

[[test]]
name = "lud12"
required-features = ["client", "server"]

[[test]]
name = "lud16"
required-features = ["client", "server"]
